# marko_envie

./: .gitignore  0todo.txt  Cargo.toml  JetbrainsIdea.sh  README.md  lazygit.sh  sublime.sh  vscode.sh
src/: common_dirs.rs  lib.rs
tests/: tests.rs
